css to fix navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,22 @@
  * Made By MaterializeCSS.com
  */
 
+.nav-wrapper {
+  z-index: 150;
+}
+
+.main-nav {
+  height: 64px;
+    z-index: 150;
+  margin-bottom: -64px;
+    position: fixed;
+  top: 0;
+}
+
+.adjust-index{
+  z-index:0 !important;
+}
+
 nav ul a,
 nav .brand-logo {
   color: #444;
